# vue-django

./: README.md  pyproject.toml
app/: urls.py  views.py
django_api/: settings.py  urls.py
vue-django/: README.md  package-lock.json  package.json  vite.config.js
vue-django/src/components/: TopPage.vue
vue-django/src/router/: index.js
